# Indie-Studio

./: CMakeLists.txt  Doxyfile  README.md  create_coverage.sh  run_test.sh
Fox/: CMakeLists.txt
Fox/include/: ColliderListener.hpp  Components.hpp  FoxEcs.hpp  FoxEngine.hpp  ScriptableBehaviour.hpp  common.hpp  raylib-cpp.hpp  raylib.hpp
Fox/include/Components/: BoxCollider.hpp  Button.hpp  Collider.hpp  Health.hpp  Image.hpp  Move.hpp  NativeScript.hpp  PlayerInput.h  PowerUp.hpp  RigidBody.hpp  Score.hpp  SpriteRenderer.hpp  Transform.hpp  Wall.hpp
Fox/include/Core/: Application.hpp  Core.hpp  PlayerManager.hpp  ResourceManager.hpp  SaveManager.hpp  Scene.hpp  SceneManager.hpp
Fox/include/Core/Audio/: AudioManager.hpp
Fox/include/Core/Input/: Input.hpp
Fox/include/Ecs/: Pipeline.hpp  World.hpp
Fox/include/Utils/: Any.hpp  Vec2.hpp  Vec3.hpp  bitsets.hpp
Fox/include/raylib-cpp/: BoundingBox.hpp  Camera3D.hpp  Color.hpp  Cube.hpp  Font.hpp  Gamepad.hpp  Image.hpp  InputBox.hpp  Keyboard.hpp  Material.hpp  Mesh.hpp  Model.hpp  Mouse.hpp  Music.hpp  Ray.hpp  RayHitInfo.hpp  Rectangle.hpp  Sound.hpp  Text.hpp  Texture.hpp  Window.hpp  raymath.hpp
Fox/src/: Any.cpp  Application.cpp  BoxCollider.cpp  ColliderListener.cpp  EntryPoint.cpp  FileSystem.cpp  Move.cpp  PlayerInput.cpp  PlayerManager.cpp  RigidBody.cpp  SaveManager.cpp  Scene.cpp  SceneManager.cpp
Fox/src/Animator/: Vec3.cpp
Fox/src/Audio/: AudioGroup.cpp  AudioManager.cpp
Fox/src/Ecs/: Pipeline.cpp  World.cpp
Fox/src/raylib-cpp/: BoundingBox.cpp  Camera3D.cpp  Color.cpp  Cube.cpp  Font.cpp  Gamepad.cpp  Image.cpp  InputBox.cpp  Keyboard.cpp  Material.cpp  Mesh.cpp  Model.cpp  Mouse.cpp  Music.cpp  Ray.cpp  RayHitInfo.cpp  Rectangle.cpp  Sound.cpp  Text.cpp  Texture.cpp  Window.cpp
assets/: howToPlay.txt
assets/bomb/: bomb.gltf  fire.gltf
assets/bonus/: bomb.gltf  fire.gltf  speed.gltf
assets/characters/: black.gltf  blue.gltf  pink.gltf  white.gltf
assets/destructible_block/: wood.gltf
assets/grounds/: dark_green.gltf  grass.gltf  light_green.gltf
assets/indestructible_block/: rock.gltf  wall.gltf
cmake/: Findraylib.cmake  Findreactphysics3d.cmake  Findreflect.cmake
doc/html/: ASystem_8hpp_source.html  Animator_8hpp_source.html  Any_8hpp_source.html  Application_8hpp_source.html  BoxCollider_8hpp_source.html  Button_8hpp_source.html  ColliderListener_8hpp_source.html  Collider_8hpp_source.html  ComponentArray_8hpp_source.html  ComponentManager_8hpp_source.html  Components_8hpp_source.html  (+284 more)
game/: CMakeLists.txt
tests/: AllTests.cpp  ApplicationTest.cpp  AudioTest.cpp  BoundingBoxTest.cpp  CMakeLists.txt  ColorTest.cpp  ComponentsTest.cpp  CubeTest.cpp  FileTest.cpp  GamepadTest.cpp  HowToPlaySceneTest.cpp  ImageTest.cpp  InputTest.cpp  KeyboardTest.cpp  MeshTest.cpp  MouseTest.cpp  MusicTest.cpp  PlayerInputTest.cpp  RayTest.cpp  RectangleTest.cpp  SoundTest.cpp  TextTest.cpp  Vec2Tests.cpp  Vec3Tests.cpp  bigsetTest.cpp  test.txt
(+186 files in other folders)
